fix(ui5-label): fix truncation
This bug was caused due to a missed code line during downporting of #3897

Fixes: #3980

--- a/packages/main/src/themes/Label.css
+++ b/packages/main/src/themes/Label.css
@@ -46,7 +46,7 @@ bdi {
 }
 
 :host(:not([wrap])[show-colon]) .ui5-label-text-wrapper {
-	max-width: calc(100% - .2rem);
+	max-width: calc(100% - .125rem);
 }
 
 :host([show-colon]) .ui5-label-required-colon {
